--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,10 +60,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Set up Docker for multi-platform 2
-        if: runner.os == 'Linux'
-        run: |
-          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+      # - name: Set up Docker for multi-platform 2
+      #   if: runner.os == 'Linux'
+      #   run: |
+      #     docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 
       - name: Build base node binaries
         run: |
